--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bdcontacts2?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=2559134dz
+spring.jpa.hibernate.ddl-auto=update
